# newen_launcher

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  LICENSE  README.md  index.html  package-lock.json  package.json  plan1.md  tailwind.config.js  tsconfig.json
.github/: copilot-instructions.md
public/: index.html  splash.html
scripts/: rename-msi.js
src/: App.tsx  icons.tsx  (+3 more)
src-tauri/: Cargo.toml  EULA.txt  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  content.rs  curseforge.rs  diagnostics.rs  discord.rs  downloader.rs  error.rs  fabric.rs  forge.rs  instances.rs  launcher.rs  lib.rs  main.rs  metrics.rs  models.rs  modrinth.rs  neoforge.rs  optimization.rs  repair.rs  skins.rs  state.rs  utils.rs  worlds.rs
src-tauri/src/auth/: ms_flow.rs  profile.rs  session.rs
src-tauri/src/commands/: auth.rs  content.rs  diagnostics.rs  discord.rs  downloads.rs  forge.rs  instances.rs  mod.rs  modrinth.rs  skins.rs  system.rs  versions.rs  worlds.rs
src-tauri/src/downloader/: assets.rs  download.rs  http_cache.rs  java.rs  libraries.rs  versions.rs
src-tauri/src/launcher/: args.rs  fs.rs  java.rs  launch.rs  mods.rs  natives.rs  options.rs  skins.rs  version.rs
src-tauri/src/models/: auth.rs  curseforge.rs  instances.rs  mod.rs  modrinth.rs  runtime.rs  settings.rs  versions.rs
src-tauri/src/modrinth/: client.rs  datapacks.rs  export.rs  install.rs  mod.rs  modpacks.rs  optimization.rs  pack.rs  shared.rs
src-tauri/src/neoforge/: installer.rs  version.rs
(+127 files in other folders)
