[package]
name = "launcher-mc-tauri"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "launcher_mc_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "stream", "multipart"] } 
tokio = { version = "1", features = ["full"] }
zip = "0.6"
futures-util = "0.3"
sha1 = "0.10"
once_cell = "1.19"
discord-rich-presence = "0.2"
# NUEVA DEPENDENCIA: Para generar UUIDs offline
uuid = { version = "1.10", features = ["v3", "v4", "serde"] }
base64 = "0.22"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["clock"] }
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }
